[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/baseball-bat.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Helvetica-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/audio/retro_die_02.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/explode3.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/2d/gun.png" type="Texture" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 1.5

[sub_resource type="Animation" id=4]
resource_name = "hold"
tracks/0/type = "value"
tracks/0/path = NodePath("Baseballbat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 297, 103 ), Vector2( 281, 151 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Baseballbat:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -62.91, -84.3447 ]
}

[sub_resource type="Animation" id=5]
resource_name = "holdSpecial"
tracks/0/type = "value"
tracks/0/path = NodePath("Baseballbat:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 297, 103 ), Vector2( 281, 151 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Baseballbat:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -62.91, -84.3447 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Baseballbat:self_modulate")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "swing"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Baseballbat:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 281, 151 ), Vector2( 193, 160 ), Vector2( 173, 200 ), Vector2( 281, 151 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Baseballbat:rotation_degrees")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -84.3447, -146.486, -170.76, -84.3447 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Baseballbat:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 2
font_data = ExtResource( 3 )

[node name="player" type="KinematicBody" groups=["player"]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.82528, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
far = 8192.0

[node name="RayCast" type="RayCast" parent="Pivot"]
enabled = true
cast_to = Vector3( 0, 0, -8 )

[node name="ui" type="CanvasLayer" parent="."]
visible = false

[node name="Baseballbat" type="Sprite" parent="ui"]
position = Vector2( 281, 151 )
rotation = -1.47209
scale = Vector2( 1.5, 1.837 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ui"]
anims/hold = SubResource( 4 )
anims/holdSpecial = SubResource( 5 )
anims/swing = SubResource( 2 )

[node name="moneyLabel" type="Label" parent="ui"]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.0235294, 0.792157, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "$0"

[node name="Label" type="Label" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "X"
align = 1
valign = 1

[node name="Gun" type="Sprite" parent="ui"]
visible = false
position = Vector2( 227, 191 )
scale = Vector2( 1, 1.55519 )
texture = ExtResource( 6 )

[node name="hitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="hardhitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
pitch_scale = 1.2
